clean code a bit and add some more logging.